--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.9.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.59.3"
   },
   "devDependencies": {
