corrected backend url

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "proxy": {
     "/api": {
-      "target": "http://localhost:5000",
+      "target": "http://niyabackend.pythonanywhere.com/",
       "secure": false
     }
   },
