--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.6.2",
     "sass": "^1.59.3"
   },
   "devDependencies": {
