--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "scripts": {
     "dev": "vite",
-    "server": "python flask/server.py",
+    "server": "python flask/index.py",
     "devs": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "classnames": "^2.3.2",
     "draft-js": "^0.11.7",
     "firebase": "^9.18.0",
